RESOLVED FIXED26395
REGRESSION (r40813-r40884): No caret after going back/forward to page with focused text field
https://bugs.webkit.org/show_bug.cgi?id=26395
Summary REGRESSION (r40813-r40884): No caret after going back/forward to page with fo...
mitz
Reported 2009-06-14 20:01:41 PDT
Steps to reproduce: 1) Go to <about:blank> 2) In the same tab, go to <data:text/html,%3Cinput%3E> 3) Click in the text field 4) Choose History > Back 5) Choose History > Forward Result: The text field is focused, but there is no caret and typing does not enter text in the field.
Attachments
Reinstate call to CachedPage::restore() (1.16 KB, patch)
2009-06-14 20:45 PDT, mitz
darin: review+
mitz
Comment 1 2009-06-14 20:02:13 PDT
mitz
Comment 2 2009-06-14 20:23:28 PDT
The code that’s supposed to restore the selection is in CachedPage::restore(). However, in TOT, CachedPage::restore() is unreachable (I verified this by removing its definition and building WebCore successfully).
mitz
Comment 3 2009-06-14 20:29:43 PDT
bisect-builds puts the regression between r40813 and r40884. Based on my previous comment, I think it was <http://trac.webkit.org/changeset/40870>.
mitz
Comment 4 2009-06-14 20:45:57 PDT
Created attachment 31277 [details] Reinstate call to CachedPage::restore()
mitz
Comment 5 2009-06-14 21:38:14 PDT
Note You need to log in before you can comment on or make changes to this bug.