        Reviewed by Darin Adler.

- fix https://bugs.webkit.org/show_bug.cgi?id=26395
          <rdar://problem/6971333> REGRESSION (r40813-r40884): No caret after
          going back/forward to page with focused text field

        No test, since the back/forward cache is disabled in DumpRenderTree

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::open): Added a call to CachedPage::restore(),
        which was removed in r40870.



Canonical link: https://commits.webkit.org/36494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44676 268f45cc-cd09-0410-ab3c-d52691b4dbfc